--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "~4.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "handlebars-helper-moment": "^0.2.0",
     "hbs": "~4.0.1",
+    "helper-moment": "^0.2.0",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
@@ -24,7 +26,8 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "time": "^0.12.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
